fixed search button alignment issues

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -131,7 +131,6 @@ nav form {
     position: relative;
     top: 50%;
     display: inline;
-    left: 5%;
     transform: translate(0%, -50%);
     transition: all 1s;
     width: 50px;
